# ecal-test-suite

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  index.html
.devcontainer/: Dockerfile  README.md  devcontainer.json  requirements.txt
.github/workflows/: ci.yml
2025-07-31_08-24-50/: .repo
2025-07-31_08-24-50/summary/: log.html  output.xml  report.html
create_new_test/: README.md  create_test.py
create_new_test/templates/: README.md.j2
create_new_test/templates/docker/: Dockerfile.j2
create_new_test/templates/robottests/: test.robot.j2
create_new_test/templates/scripts/: build_images.sh.j2  entrypoint.sh.j2
create_new_test/templates/src/: CMakeLists.txt.j2  test_pub.cpp.j2  test_sub.cpp.j2
integration_tests/: CMakeLists.txt  README.md  requirements.txt
integration_tests/basic_pub_sub/: README.md
integration_tests/basic_pub_sub/robottests/: basic_pub_sub.robot
integration_tests/basic_pub_sub/scripts/: entrypoint.sh
integration_tests/basic_pub_sub/src/: one_publisher.cpp  one_subscriber.cpp
integration_tests/docker/: Dockerfile.ecal_base
integration_tests/lib/: DockerLibrary.py  GlobalPathsLibrary.py
integration_tests/multi_pub_sub/: README.md
integration_tests/pub_crash/: README.md
integration_tests/rpc_n_to_n_test/: README.md
integration_tests/rpc_ping_test/: README.md
integration_tests/rpc_ping_test/src/: CMakeLists.txt  rpc_ping_client.cpp  rpc_ping_server.cpp
integration_tests/rpc_reconnect_test/: README.md
integration_tests/sub_crash/: README.md
integration_tests/sub_send_crash/: README.md
(+30 files in other folders)
